<resources>
    <string name="app_name">Promptastic</string>
    <string name="app_version">v1.0.0</string>

    <!-- Script List screen-->
    <string name="empty_view_text">Hey, you have not created a script yet!</string>

    <!-- Edit Script Screen-->
    <string name="edit_text_script_title_hint">Type the script\'\s title here</string>
    <string name="edit_text_script_content_hint">Type the script\'\s content here</string>
    <string name="edit_blank_error">Please, add a title and a text before saving your script</string>

    <!--Login Screem -->
    <string name="edit_text_login_user_name">E-mail</string>
    <string name="edit_text_login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_new_user">Are you new here?&#032;</string>
    <string name="login_sign_up"><u>&#032;Sign Up!</u></string>
    <string name="login_fail">Login Failure. Please, try again</string>
    <string name="login_username_error">Type your e-mail address</string>
    <string name="login_password_error">Type your password</string>

    <string name="signup_name_hint">First, type your name</string>
    <string name="signup_email_hint">Then, an e-mail address</string>
    <string name="signup_password_hint">Finally, a password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_fail">Sign Up Failure. Please, try again</string>
    <string name="signup_good">Welcome!!!</string>
    <string name="signup_description">To sign up, follow the instructions below</string>
    <string name="signup_dialog_title">Success!!!!</string>
    <string name="signup_dialog_message">Your account has been created. Please, login to continue</string>
    <string name="signup_dialog_ok">OK</string>
    <string name="signup_error_message">Please, try again later</string>

    <string name="navigation_scripts">Scripts</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_sign_out">Sign Out</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="play_script">Play Script</string>
    <string name="edit_script">Edit Script</string>
    <string name="delete_script">Delete Script</string>
    <string name="create_script">Create Script</string>

    <string name="play_script_dialog_message">Would you like to play the script again?</string>
    <string name="play_script_dialog_ok">OK</string>
    <string name="play_script_dialog_cancel">Cancel</string>

    <string name="play_script_category" translatable="false">play_script_category</string>

    <string name="open_source_licenses"><u>Open Source Licenses</u></string>

    <string name="script_saved">Script saved!</string>
    <string name="script_deleted">Script deleted!</string>
    <string name="script_not_saved">Please, try again later</string>

    <!--Settings-->

    <string name="pref_title_background">Background Theme</string>

    <string-array name="pref_background_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="pref_background_entry_values">
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_text_speed">Text Speed</string>
    <string name="pref_default_display_name">Normal</string>

    <string-array name="text_speed_list_preference_entries">
        <item>Very Slow</item>
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>

    <string-array name="text_speed_list_preference_entry_values">
        <item>200000</item>
        <item>150000</item>
        <item>100000</item>
        <item>75000</item>
        <item>50000</item>
    </string-array>

    <string name="pref_title_text_color">Text Size</string>

    <string-array name="text_size_list_preference_entries">
        <item>Very Small</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>Very Big</item>
    </string-array>

    <string-array name="text_size_list_preference_entry_values">
        <item>18.0</item>
        <item>24.0</item>
        <item>32.0</item>
        <item>48.0</item>
        <item>54.0</item>
    </string-array>

    <string name="promptastic_logo_content_description">Promptastic Logo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_no_script">Your last played script will be displayed here.</string>
    <string name="widget_last_played_script">Your last played script was:</string>
    <string name="empty_frag_text">Please, select a script at the left</string>

    <string name="intro_slide_1">Have an awesome idea for a video?</string>
    <string name="intro_slide_2">Use Promptastic to write you idea down as a script</string>
    <string name="intro_slide_3">Play your scripts with Promptastic and be the next video star!</string>

    <string name="permission_denied">Permission Denied!</string>
    <string name="profile_photo_added">Profile Photo added</string>
    <string name="profile_photo_soon">Your photo will be loaded soon</string>
</resources>
