<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/iv_about_logo"
        android:layout_width="@dimen/login_icon_width"
        android:layout_height="@dimen/login_icon_height"
        android:contentDescription="@string/promptastic_logo_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_about_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/promptastic_logo_only" />

    <TextView
        android:id="@+id/tv_about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_sketch"
        android:textSize="@dimen/about_name_text_size"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/iv_about_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_about_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/app_version"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_about_name"
        app:layout_constraintBottom_toTopOf="@id/tv_about_open_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_about_open_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/open_source_licenses"
        android:textColor="@color/colorPrimaryText"
        android:layout_margin="@dimen/activity_default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>